--- a/6 - Deskriptive Statistiken/6 - Deskriptive Statistiken.Rmd
+++ b/6 - Deskriptive Statistiken/6 - Deskriptive Statistiken.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Einführung in R"
-author: "Clemens Brunner"
-date: "14.-15.2.2019"
+author: "[Clemens Brunner](mailto:clemens.brunner@uni-graz.at)"
+date: "18.-19.10.2019"
 output:
+  pdf_document: default
   html_document:
     fig_caption: no
-  pdf_document: default
 ---
 
 ```{r set-options, echo=FALSE, cache=FALSE}
@@ -159,7 +159,7 @@ Einer der bekanntesten Datensätze im Bereich Machine Learning ist der Iris-Date
 - Berechnen Sie deskriptive Statistiken aller Spalten und vergleichen Sie Ihre Ergebnisse vom Mittelwert, Standardabweichung, Minimum und Maximum mit der Beschreibung auf der [UCI Machine Learning Datenbank](http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.names). Gibt es Unterschiede?
 - Berechnen Sie die Mittelwerte der vier Merkmale getrennt für jede der drei Iris-Arten.
 
----
+
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("cc_license.png")
