--- a/6 - Deskriptive Statistiken/6 - Solution.Rmd
+++ b/6 - Deskriptive Statistiken/6 - Solution.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
-author: "Clemens Brunner"
-date: "14.-15.2.2019"
+author: "[Clemens Brunner](mailto:clemens.brunner@uni-graz.at)"
+date: "18.-19.10.2019"
 output:
   html_document:
     fig_caption: no
@@ -45,7 +45,7 @@ sapply(iris[, 1:4], max)
 by(iris[, 1:4], iris$Species, summary)
 ```
 
----
+
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("cc_license.png")
