--- a/9 - Mittelwertsvergleich/9 - Solution.Rmd
+++ b/9 - Mittelwertsvergleich/9 - Solution.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einführung in R"
-author: "Clemens Brunner"
-date: "14.-15.2.2019"
+author: "[Clemens Brunner](mailto:clemens.brunner@uni-graz.at)"
+date: "18.-19.10.2019"
 output:
   html_document:
     fig_caption: no
@@ -62,7 +62,7 @@ library(MASS)
 t.test(immer$Y1, immer$Y2, paired=TRUE, conf.level=0.99)
 ```
 
----
+
 
 ```{r, fig.retina = NULL, echo=FALSE}
 knitr::include_graphics("cc_license.png")
